# whatsapp-cloud-api-py

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
compat-checker/: Dockerfile  check_compat.py  railway.toml  requirements.txt
src/whatsapp_cloud_api/: __init__.py  client.py  types.py
src/whatsapp_cloud_api/errors/: __init__.py  categorize.py  graph_api_error.py  retry.py
src/whatsapp_cloud_api/events/: __init__.py  dispatcher.py  events.py
src/whatsapp_cloud_api/resources/: flows.py  media.py  phone_numbers.py
src/whatsapp_cloud_api/resources/messages/: __init__.py  models.py  resource.py
src/whatsapp_cloud_api/resources/templates/: __init__.py  models.py  resource.py
src/whatsapp_cloud_api/utils/: __init__.py  case.py
src/whatsapp_cloud_api/webhooks/: __init__.py  normalize.py  verify.py
tests/: conftest.py  test_client.py  test_compat_gaps.py  test_errors_categorize.py  test_errors_graph_api_error.py  test_errors_retry.py  test_events.py  test_events_dispatcher.py  test_messages_models.py  test_messages_resource.py  test_resources_flows.py  test_resources_media.py  test_resources_phone_numbers.py  test_resources_templates.py  test_types.py  test_utils_case.py  test_webhooks_normalize.py  test_webhooks_verify.py
