[project]
name = "whatsapp-cloud-api-py"
version = "0.1.0"
description = "Async Python SDK for WhatsApp Business Cloud API with Pydantic V2"
requires-python = ">=3.11"
license = "MIT"

[project.urls]
Homepage = "https://github.com/HeiCg/whatsapp-cloud-api-py"
Repository = "https://github.com/HeiCg/whatsapp-cloud-api-py"
Issues = "https://github.com/HeiCg/whatsapp-cloud-api-py/issues"
dependencies = [
    "httpx[http2]>=0.27",
    "pydantic>=2.7",
]

[project.optional-dependencies]
events = ["pyventus>=0.7.2"]
webhooks = ["starlette>=0.37"]
server = ["cryptography>=43.0"]
dev = [
    "ruff>=0.8",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.22",
    "pyventus>=0.7.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/whatsapp_cloud_api"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["RUF022"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
