[project]
name = "whatsapp-cloud-api-py"
version = "0.2.2"
description = "Async Python SDK for WhatsApp Business Cloud API with Pydantic V2"
requires-python = ">=3.11"
license = "MIT"
readme = "README.md"
keywords = ["whatsapp", "whatsapp-cloud-api", "async", "sdk", "pydantic", "kapso"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: AsyncIO",
    "Framework :: Pydantic :: 2",
    "Topic :: Communications :: Chat",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "httpx[http2]>=0.27",
    "pydantic>=2.7",
]

[project.urls]
Homepage = "https://github.com/HeiCg/whatsapp-cloud-api-py"
Repository = "https://github.com/HeiCg/whatsapp-cloud-api-py"
Issues = "https://github.com/HeiCg/whatsapp-cloud-api-py/issues"

[project.optional-dependencies]
events = ["pyventus>=0.7.2"]
webhooks = ["starlette>=0.37"]
server = ["cryptography>=43.0"]
dev = [
    "ruff>=0.8",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.22",
    "pyventus>=0.7.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/whatsapp_cloud_api"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["RUF022"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
